--- a/hello.html
+++ b/hello.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>hello</title>
+    </head>
+    <body>
+        <h1>Welcome</h1>
+        Hello World!!
+    </body>
+</html>
